# mbed-mcuboot-demo-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SimpleApp.cpp  UpdaterApp.cpp  mbed_app.json5  secondary_bd.cpp
.github/workflows/: compile.yml
